devops-tools/atmos/components/terraform/infra/ec2/04-igw.tf
# Internet gateway creation
resource "aws_internet_gateway" "igw_1" {
  vpc_id = aws_vpc.vpc_1.id

  tags = {
    Name = "igw-ec2-1"
  }

  depends_on = [aws_vpc.vpc_1]
}
